Fix rsvp button design issue on mobile

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -325,7 +325,7 @@ Hero
   min-height: 750px;
 
   @media (max-width: 576px) {
-    min-height: 500px;
+    min-height: 460px;
   }
   background: url('../img/bg.jpg') center center;
   -webkit-background-size: cover;
@@ -336,8 +336,10 @@ Hero
 
   .rsvp-btn {
     position: absolute;
-    bottom: 40px;
+    display: inline-block;
+    bottom: 8px;
     left: 50%;
+    width: 200px;
     transform: translateX(-50%);
   }
 
@@ -363,7 +365,7 @@ Hero
 
   .hero-content img {
     width: 55%;
-    margin-bottom: 12%;
+    // margin-bottom: 8%;
   }
 }
 
@@ -374,8 +376,8 @@ Hero
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
-    background: linear-gradient(to bottom, rgba(19, 16, 16, 0.3), transparent);
+    height: 50%;
+    background: linear-gradient(to bottom, rgba(19, 16, 16, 0.75), transparent);
     z-index: 1;
   }
 
